ADD Custom PopUp

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="title_activity_recording">Record audio</string>
 
 
+    <!-- ConfirmationDialog Dialog -->
+    <string name="confirmation_maessage">Recording was saved</string>
+
+
 </resources>
