--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,11 @@
 
     <!-- RecordService -->
     <string name="file_name">Sound Recording</string>
+    <string name="recording_starts">Recording Start</string>
+    <string name="recording_finish">Recording Ended</string>
+
+    <!-- Permission Dialog -->
+    <string name="permission_info">I\'m sorry, but You have denied access to microphone or device storage.</string>
+
 
 </resources>
