--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -85,5 +85,7 @@
     <string name="_00_00">00:00</string>
     <string name="mmm_dd_yyyy_hh_mm_a">mmm dd yyyy - hh:mm a</string>
     <string name="widget">Widget</string>
+    <string name="appwidget_text">EXAMPLE</string>
+    <string name="add_widget">Add widget</string>
 
 </resources>
